<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright [2021] [Reham Albakouni, Matt Asgari Motlagh, Aidan Horemans, Courtenay Laing-Kobe, Vivek Malhotra, Kelly Shih]

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Habit name">

    </TextView>

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_title"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:layout_marginVertical="5dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Habit reason">

    </TextView>

    <EditText
        android:id="@+id/reason_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reason"
        android:maxLength="30"
        android:inputType="textPersonName"
        android:layout_marginVertical="5dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/privacySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pub"
        android:textOn="@string/pub"
        android:textOff="@string/priv"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Days due">

    </TextView>

    <LinearLayout
        android:id="@+id/day_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/monday_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/checkbox_circles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:gravity="center">

            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="M"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/tuesday_select"
                android:button="@drawable/checkbox_circles"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:minWidth="0dp"
                android:minHeight="0dp">
            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="T"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/wednesday_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/checkbox_circles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:minWidth="0dp"
                android:minHeight="0dp">
            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="W"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/thursday_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:button="@drawable/checkbox_circles"
                android:minWidth="0dp"
                android:minHeight="0dp">
            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="T"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/friday_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:button="@drawable/checkbox_circles"
                android:minWidth="0dp"
                android:minHeight="0dp">
            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="F"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/saturday_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:button="@drawable/checkbox_circles"
                android:minWidth="0dp"
                android:minHeight="0dp">
            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="S"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="2dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/sunday_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:button="@drawable/checkbox_circles"
                android:minWidth="0dp"
                android:minHeight="0dp">
            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="S"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>
