...
        tools:listitem="@layout/fragment_my_habit"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_habit_event"
        android:src="@drawable/ic_round_add_24"
...
